--- a/MoviesLibrary.ClientApp/Views/MainWindow.xaml
+++ b/MoviesLibrary.ClientApp/Views/MainWindow.xaml
@@ -2,12 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:viewmodels="clr-namespace:MoviesLibrary.ClientApp.ViewModels"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MoviesLibrary.ClientApp"
+        d:DataContext="{d:DesignInstance Type={x:Type viewmodels:ViewModelMain}, IsDesignTimeCreatable=False}"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
+        SaveWindowPosition="True"
+        Topmost="True"
         Title="Movies Library" Height="450" Width="800">
     
     <Controls:MetroWindow.RightWindowCommands>
@@ -32,24 +36,26 @@
         </Grid.RowDefinitions>
 
         <!--#region Menu -->
-        <Menu BorderThickness="0,0,0,1" BorderBrush="{DynamicResource MahApps.Brushes.Accent}">
+        <Menu Grid.Row="0" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource MahApps.Brushes.Accent}">
             <MenuItem Header="Fichier">
-                <MenuItem Header="Quitter"/>
-            </MenuItem>
-            <MenuItem Header="Edition">
-                <MenuItem Header="Paramètres"/>
+                <MenuItem Header="Quitter" Command="{Binding ExitCommand}"/>
             </MenuItem>
         </Menu>
         <!--#endregion-->
 
         <!--#region Onglets -->
-            
-            <!--Ma Collection
-            Les Films
-            Les Séries-->
-                
-        
+
+        <TabControl Grid.Row="1" ItemsSource="{Binding ItemsSource}" SelectedItem="{Binding SelectedItem}">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Title}"/>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+        </TabControl>
+
         <!--#endregion-->
+
+
 
 
     </Grid>
