--- a/MoviesLibrary.ClientApp/Resources/DataTemplates.xaml
+++ b/MoviesLibrary.ClientApp/Resources/DataTemplates.xaml
@@ -1,15 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:viewModels="clr-namespace:MoviesLibrary.ClientApp.ViewModels"
-                    xmlns:local="clr-namespace:MoviesLibrary.ClientApp.Resources">
+                    xmlns:local1="clr-namespace:MoviesLibrary.ClientApp.Views">
 
-    <DataTemplate DataType="{x:Type viewModels:ViewModelMyMovies}">
-        <StackPanel>
-            <TextBlock Text="{Binding Title}"/>
-        </StackPanel>
-    </DataTemplate>
 
     <DataTemplate DataType="{x:Type viewModels:ViewModelMovies}">
+        <local1:SearchMoviesView/>
+    </DataTemplate>
+    
+    <DataTemplate DataType="{x:Type viewModels:ViewModelMyMovies}">
         <StackPanel>
             <TextBlock Text="{Binding Title}"/>
         </StackPanel>
