--- a/MoviesLibrary.ClientApp/Views/SearchMoviesView.xaml
+++ b/MoviesLibrary.ClientApp/Views/SearchMoviesView.xaml
@@ -17,16 +17,17 @@
         </Grid.RowDefinitions>
 
         <!--#region Search Bar -->
+        
         <Grid Grid.Row="0" Background="{DynamicResource MahApps.Brushes.Accent2}">
             <Grid Margin="0,10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
@@ -43,18 +44,18 @@
                 <Button Grid.Column="5" Content="Rechercher un film" Padding="50,10" Command="{Binding SearchCommand}"/>
             </Grid>
         </Grid>
+        
         <!--#endregion-->
 
         <!--#region Liste Films -->
 
         <Grid Grid.Row="1">
-
             <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Hidden">
-                <ItemsControl ItemsSource="{Binding Path=ItemsSource[0].Search}" HorizontalAlignment="Center">
+                <ItemsControl ItemsSource="{Binding Path=ItemsSource}" HorizontalAlignment="Center">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Border Margin="30" Background="{DynamicResource MahApps.Brushes.Accent3}" Width="260">
-                                <Grid >
+                                <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"/>
                                         <RowDefinition Height="*"/>
@@ -74,7 +75,9 @@
                                             <TextBlock Text="{Binding Title}" TextAlignment="Center" TextWrapping="Wrap"/>
                                             <TextBlock Text="{Binding Year}"  HorizontalAlignment="Center" FontStyle="Italic" FontSize="14" Margin="0,5,0,0"/>
                                         </StackPanel>
-                                        <Button Grid.Row="1" Content="Ajouter à ma liste" HorizontalAlignment="Stretch" Padding="10" Margin="0,10,0,0"/>
+                                        <Button Grid.Row="1" Content="Ajouter à ma liste" HorizontalAlignment="Stretch" Padding="10" Margin="0,10,0,0"
+                                                Command="{Binding Path=DataContext.AddCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ItemsControl}}"
+                                                CommandParameter="{Binding}"/>
                                     </Grid>  
                                     
                                 </Grid>
@@ -87,8 +90,7 @@
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                 </ItemsControl>
-            </ScrollViewer>
-            
+            </ScrollViewer>            
         </Grid>
         
         <!--#endregion-->
@@ -116,8 +118,8 @@
                 <TextBlock Grid.Column="3" FontWeight="Bold" FontSize="14"  Padding="20,10">
                     <TextBlock.Text>
                         <MultiBinding StringFormat="Page {0} / {1}">
-                            <Binding Path="Pagination.IndexPage" x:Name="indexPage" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay"/>
-                            <Binding Path="Pagination.MaxPage"  x:Name="maxPage" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay"/>
+                            <Binding Path="Pagination.IndexPage" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay"/>
+                            <Binding Path="Pagination.MaxPage" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay"/>
                         </MultiBinding>
                     </TextBlock.Text>
                 </TextBlock>
