--- a/MoviesLibrary.ClientApp/Views/SearchMoviesView.xaml
+++ b/MoviesLibrary.ClientApp/Views/SearchMoviesView.xaml
@@ -7,7 +7,7 @@
              xmlns:local="clr-namespace:MoviesLibrary.ClientApp.Views"
              xmlns:iconPacks="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.Material"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance Type=viewmodels:ViewModelMovies, IsDesignTimeCreatable=False}"
+             d:DataContext="{d:DesignInstance Type=viewmodels:ViewModelSearchMovies, IsDesignTimeCreatable=False}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -50,6 +50,36 @@
         <!--#region Liste Films -->
 
         <Grid Grid.Row="1">
+
+            <!--#region Liste vide -->
+
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Faite une recherche de film" FontSize="40" FontStyle="Italic">
+                <TextBlock.Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="Visibility" Value="Hidden"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding TotalResults}" Value="-1">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Aucun résultat" FontSize="40" FontStyle="Italic">
+                <TextBlock.Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="Visibility" Value="Hidden"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding TotalResults}" Value="0">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
+
+            <!--#endregion-->
+
             <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Hidden">
                 <ItemsControl ItemsSource="{Binding Path=ItemsSource}" HorizontalAlignment="Center">
                     <ItemsControl.ItemTemplate>
@@ -90,7 +120,8 @@
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                 </ItemsControl>
-            </ScrollViewer>            
+            </ScrollViewer>
+
         </Grid>
         
         <!--#endregion-->
@@ -99,6 +130,16 @@
 
         <Grid Grid.Row="2" Background="{DynamicResource MahApps.Brushes.Accent2}">
             <Grid Margin="0,10">
+                <Grid.Style>
+                    <Style TargetType="Grid">
+                        <Setter Property="Visibility" Value="Visible"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Pagination.MaxPage}" Value="0">
+                                <Setter Property="Visibility" Value="Hidden"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Style>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="auto"/>
